--- a/info/task_description.html
+++ b/info/task_description.html
@@ -52,10 +52,10 @@
 
 <!-- Here you can explain how it can be used in development -->
 <!-- The section is optional -->
-<p class="for_info_only">
+<!-- <p class="for_info_only">
     <strong>How it’s used:</strong>
     <i>Schedule optimizing is a usual thing.</i>
-</p>
+</p> -->
 
 <!-- Here you can explain some constraints for input-->
 <!-- The section is optional -->
