--- a/translations/uk/info/task_description.html
+++ b/translations/uk/info/task_description.html
@@ -52,10 +52,10 @@
 
 <!-- Here you can explain how it can be used in development -->
 <!-- The section is optional -->
-<p class="for_info_only">
+<!-- <p class="for_info_only">
     <strong>Сфера застосування:</strong>
     <i>оптимізації розкладу - це звична річ.</i>
-</p>
+</p> -->
 
 <!-- Here you can explain some constraints for input-->
 <!-- The section is optional -->
