--- a/translations/uk/info/task_description.html
+++ b/translations/uk/info/task_description.html
@@ -5,42 +5,42 @@
 </p>
 
 <p style="text-align: justify;">
-    Тобі надається послідовність працівників з їх робочими уподобаннями та навичками. Також у тебе є бізнес-потреби: необхідний робочий час та завдання. Твоя функція повинна повернути графік, як задовольнити потреби бізнесу доступними працівниками (якщо це можливо). Тепер давай зануримось у деталі.
+    Ви отримуєте послідовність працівників з їхніми робочими вподобаннями та навичками. Також у вас є бізнес-потреби у вигляді необхідного робочого часу та завдань. Ваша функція повинна повернути розклад, який задовольняє бізнес-потреби при наявних працівниках (якщо це можливо). Тепер давайте зануримося в деталі.
 </p>
 <p style="text-align: justify;">
-    <b>staff</b> це словник, в якому ключі, це імена працівників і значення це теж словники. Кожне значення-словник включає три пари ключ-значення:
+    <b>staff</b> це{% if is_js %}n Об'єкт{% else %} словник{% endif %}, де ключами є імена працівників, а значеннями - {% if is_js %}Об'єкти{% else %} словники{% endif %}. Кожне значення {% if is_js %}Об'єкт{% else %}словника{% endif %} включає три пари ключ-значення:
     <ul>
         <li>
-            <b>"pref_shifts"</b> - {% if is_js %}масив{% else %}список{% endif %} рядків: зміни, в які працівник хоче працювати (можуть бути <b>"first"</b>, <b>"second"</b> або обидві у такому порядку);
+            <b>"pref_shifts"</b> - {% if is_js %}масив{% else %}список{% endif %} рядків: зміни, працівник хоче працювати (може бути <b>"first"</b>, <b>"second"</b> або обидва в такому порядку);
         </li>
         <li>
-            <b>"days_off"</b> - {% if is_js %}масив{% else %}список{% endif %} рядків: дні, коли працівник хоче бути вільним (повні назви днів тижня);
+            <b>"days_off"</b> - {% if is_js %}масив{% else %}список{% endif %} рядків: дні, у які працівник хоче бути вільним (повні назви днів тижня);
         </li>
         <li>
-            <b>"skills"</b> - {% if is_js %}масив{% else %}список{% endif %} рядків: навички, якими володіє працівник.
+            <b>"skills"</b> - {% if is_js %}масив{% else %}список{% endif %} рядків: роботи, які працівник може виконувати.
         </li>
     </ul>
 </p>
 <p style="text-align: justify;">
-    <b>business_needs</b> це {% if is_js %}масив{% else %}список{% endif %} з трьох значень: день тижня, для якого робимо графік - рядок; кількість змін, які мають бути відпрацьовані у цей день - ціле число; завдання, які мають бути виконані у цей день - {% if is_js %}масив{% else %}список{% endif %} рядків.
+    <b>business_needs</b> це{% if is_js %}n масив{% else %} список{% endif %} з трьох значень: день тижня, для якого потрібно скласти розклад - рядок; кількість змін у цей день - ціле число; завдання, які потрібно виконати у цей день - {% if is_js %}масив{% else %}список{% endif %} з рядків.
 </p>
 <p style="text-align: justify;">
-    Зверніть увагу на зміни. Кожен працівник може працювати у першу зміну, другу або обидві (цілий день), виключаючи вільні дні. Кількість змін, як потреба бізнесу, означає кількість різних змін, які мають бути відпрацьовані в цей день. Наприклад, якщо кількість змін <b>3</b>, то вона може бути виконана працівником, який працює цілий день (перша та друга його зміни, загалом - 2), і будь-яким іншим працівником ще (тому що кожен працівник має хоча б одну зміну) або трьома змінами від різних працівників. Кількість змін повинна бути розділена порівну між <b>"first"</b> і <b>"second"</b> денними змінами. Якщо кількість змін непарна (і не дорівнює 1), <b>"first"</b> денна зміна повинна включати на одну зміну більше, ніж <b>"second"</b> денна зміна.
+    Зауваження про зміни. Кожен працівник може працювати у першу зміну, другу або обидві (цілий день), за винятком своїх вихідних. Кількість змін для бізнесу означає кількість різних змін, які можуть бути присутніми в цей день. Наприклад, якщо кількість змін <b>3</b>, то під неї може підпадати працівник, який працює повний день (обидві його зміни, "перша" і "друга", разом - 2), і ще один працівник (оскільки кожен працівник має принаймні одну зміну), або три зміни від різних працівників. Кількість змін має бути поділена порівну між <b>"first"</b> та <b>"second"</b> денними змінами. Якщо кількість змін непарна (і не дорівнює 1), то <b>"first"</b> денна зміна повинна включати на одну зміну більше, ніж <b>"second"</b> денна зміна.    
 </p>
 <p style="text-align: justify;">
-    Навички можуть бути частково/абсолютно однаковими для різних працівників. Отже, коли ти наповнюєш денні зміни, обирай працівників з меншою кількістю навичок - вони зазвичай менш оплачувані. Якщо число навичок те саме - вибирай за іменем в алфавітному порядку. З точки зору залучення працівників, перша зміна дня має пріоритет: важливіше мати саме там працівників з меншою кількістю навичок. Завдання - це мінімальний перелік, який потрібно виконати - агрегований перелік навичок для цього дня може бути більший. Кожне окреме завдання має бути виконане (закрите відповідною навичкою) кимось у <b>"first"</b> чи <b>"second"</b> денну зміну.
+    Навички можуть бути частково/повністю однаковими для різних працівників. Тому, коли ви заповнюєте денні зміни, вибирайте працівників з меншою кількістю навичок - вони, як правило, менше оплачуються. Якщо кількість однакова - обирайте за іменами в алфавітному порядку. З точки зору залученості працівників, перша денна зміна має пріоритет: там важливіше мати працівників з меншою кількістю навичок. Завдання - це мінімальна послідовність, яку потрібно виконати - послідовність агрегованих навичок на цей день може бути ширшою. Кожне завдання має бути виконане (покрите відповідною навичкою) кимось із працівників <b>"first"</b> або <b>"second"</b> денної зміни.
 </p>
 <p style="text-align: justify;">
-    Твоя функція повинна повертати {% if is_js %}масив із двох масивів{% else %}список із двох списків{% endif %} (денні зміни) з відсортованими в алфавітному порядку іменами працівників, які мають виходити на роботу в цю зміну. Якщо кількість потрібних змін <b>1</b> - тоді один із внутрішніх {% if is_js %}масивів{% else %}списків{% endif %} буде порожній. Якщо неможливо скласти графік - обидва внутрішні {% if is_js %}масиви{% else %}списки{% endif %} мають бути порожніми.
+    Ваша функція повинна повернути масив{% if is_js %}n з двох масивів{% else %} список з двох списків{% endif %} (денних змін) з відсортованими за алфавітом іменами працівників, які будуть працювати у відповідну денну зміну. Якщо кількість змін дорівнює <b>1</b> - один з внутрішніх масивів {% if is_js %}{% else %} списків{% endif %} буде пустим. Якщо неможливо скласти розклад - обидва внутрішні масиви {% if is_js %}{% else %} списків{% endif %} повинні бути порожніми.
 </p>
 
 <!-- Explain input and output values -->
 <p>
-    <strong>Вхідні дані:</strong> Два аргументи: {% if is_js %}Об'єкт{% else %}словник{% endif %} з даними працівників, {% if is_js %}масив{% else %}список{% endif %} з описом потреб бізнесу.
+   <strong>Вхідні дані:</strong> Два аргументи: {% if is_js %}об'єкт{% else %}словник{% endif %} з даними про співробітників, масив{% if is_js %}n масив{% else %} список{% endif %} з описом бізнес-потреби.
 </p>
 
 <p>
-    <strong>Вихідні дані:</strong> {% if is_js %}Масив із двох масивів{% else %}Список із двох списків{% endif %} з іменами (рядки). 
+   <strong>Вихідні дані:</strong> Масив{% if is_js %}n з двох масивів{% else %}, список з двох списків{% endif %} з іменами у вигляді рядків. 
 </p>
 
 
@@ -53,8 +53,8 @@
 <!-- Here you can explain how it can be used in development -->
 <!-- The section is optional -->
 <!-- <p class="for_info_only">
-    <strong>Сфера застосування:</strong>
-    <i>оптимізації розкладу - це звична річ.</i>
+    <strong>How it’s used:</strong>
+    <i>Schedule optimizing is a usual thing.</i>
 </p> -->
 
 <!-- Here you can explain some constraints for input-->
